Fix arrows overlapping content.
Fixes #220

--- a/src/assets/less/content.less
+++ b/src/assets/less/content.less
@@ -546,7 +546,7 @@ h1 small.beta {
   -webkit-flex-direction: column;
   cursor: pointer;
   text-align: center;
-  @media(max-width: @xlarge-size) {
+  @media(max-width: @xxlarge-size) {
    top: auto;
    float: left;
    display: block;
